# google-pubsub-adapter

./: .gitignore  README.md  requirements-testing.txt  setup.cfg
.github/workflows/: ci.yml
example_consumer/google_pubsub_consumer/: consumer.md  consumer.py
google_pubsub_adapter/: __init__.py  apps.py  constants.py  settings.py
google_pubsub_adapter/management/commands/: init_pubsub.py
google_pubsub_adapter/publisher/: google_pubsub_publisher.py
tests/: conftest.py
tests/google_pubsub_adapter/publisher/: test_google_pubsub_publisher.py
