[metadata]
name = google_pubsub_adapter
version = 0.1
description = Herbie Adapter that publishes messages to Google Pubsub.
long_description = file: README.md
url = https://github.com/herbie/google-pubsub-adapter
author =
author_email =
license = MIT

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
install_requires =
    django >= 3.0
    djangorestframework >= 3.11
    google-cloud-pubsub >= 1.5.0
    herbie >= 0.1
