[metadata]
name = google_pubsub_adapter
version = 0.0.1
author = Project A Services GmbH & Co. KG
author_email = it-team@project-a.com
description = Herbie Adapter that publishes messages to Google Pubsub.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/herbie/google-pubsub-adapter
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requires =
    django >= 3.0
    djangorestframework >= 3.11
    google-cloud-pubsub >= 1.5.0
    herbie @ git+https://github.com/herbie/herbie@package-herbie

[options.extras_require]
tests =
    pytest >= 5.4.3
    pytest-django >= 3.7.0
    flake8 >= 3.8.0
    black == 19.10b0

[flake8]
exclude =
    .git,
    __pycache__,
    venv
    old,
    build,
    dist
    .tox
ignore = W504,W601
max-line-length = 119
